Change Statement to PreparedStatement on Repository